PDF Viewer back to original-not workin in standalone still